wallet_core/tests_integration/tests/snapshots/gba_pid@999997695.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 174
description: "BSN: 999997695"
expression: attributes
---
com.example.pid__given_name:
  String: Kevin Sander
com.example.pid__family_name:
  String: Meerman
com.example.pid__own_family_name:
  String: Meerman
com.example.pid__gender:
  Gender: Male
com.example.pid__birth_date:
  Date: 2000-06-06
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__has_spouse_or_partner:
  Boolean: false
com.example.pid__bsn:
  String: "999997695"
com.example.address__resident_street:
  String: Thorbeckelaan
com.example.address__resident_house_number:
  String: "16"
com.example.address__resident_postal_code:
  String: 3552CS
com.example.address__resident_city:
  String: Utrecht
com.example.address__resident_country:
  String: Nederland
