wallet_core/tests_integration/tests/snapshots/gba_pid@999997725.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 174
description: "BSN: 999997725"
expression: attributes
---
com.example.pid__given_name:
  String: Beatrijs
com.example.pid__family_name:
  String: Verbeek
com.example.pid__own_family_name:
  String: Verbeek
com.example.pid__gender:
  Gender: Female
com.example.pid__birth_date:
  Date: 1978-02-01
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__has_spouse_or_partner:
  Boolean: false
com.example.pid__bsn:
  String: "999997725"
com.example.address__resident_street:
  String: Europaboulevard
com.example.address__resident_house_number:
  String: "1"
com.example.address__resident_postal_code:
  String: 1079PC
com.example.address__resident_city:
  String: Amsterdam
com.example.address__resident_country:
  String: Nederland
