wallet_core/tests_integration/tests/snapshots/gba_pid@999998353.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 174
description: "BSN: 999998353"
expression: attributes
---
com.example.pid__given_name:
  String: Xander
com.example.pid__family_name:
  String: Arendsen
com.example.pid__own_family_name:
  String: Arendsen
com.example.pid__gender:
  Gender: Male
com.example.pid__birth_date:
  Date: 2015-12-01
com.example.pid__age_over_18:
  Boolean: false
com.example.pid__has_spouse_or_partner:
  Boolean: false
com.example.pid__bsn:
  String: "999998353"
com.example.address__resident_street:
  String: Turfmarkt
com.example.address__resident_house_number:
  String: "1"
com.example.address__resident_postal_code:
  String: 2511CA
com.example.address__resident_city:
  String: "'s-Gravenhage"
com.example.address__resident_country:
  String: Nederland
